--- a/src/main/resources/cartridge/bin/install
+++ b/src/main/resources/cartridge/bin/install
@@ -3,6 +3,7 @@
 # Embeds Oracle-JDBC configuration into an JBoss EAP instance
 
 source $OPENSHIFT_CARTRIDGE_SDK_BASH
+source ${OPENSHIFT_ORACLEJDBC_DIR}/bin/util
 
 case "$1" in
   -v|--version) oracle_jdbc_version="$2"
@@ -13,46 +14,16 @@ esac
 
 env_dir="${OPENSHIFT_ORACLEJDBC_DIR}/env"
 
-if [ "x$OPENSHIFT_ORACLEJDBC_JNDI_NAME" == "x" ]; then
-  OPENSHIFT_ORACLEJDBC_JNDI_NAME="${oracle.db.jndiName}"
-  set_env_var 'OPENSHIFT_ORACLEJDBC_JNDI_NAME' "$OPENSHIFT_ORACLEJDBC_JNDI_NAME" $env_dir
-fi
-
-if [ "x$OPENSHIFT_ORACLEJDBC_HOST" == "x" ]; then
-  OPENSHIFT_ORACLEJDBC_HOST="${oracle.db.host}"
-  set_env_var 'OPENSHIFT_ORACLEJDBC_HOST' "$OPENSHIFT_ORACLEJDBC_HOST" $env_dir
-fi
-
-if [ "x$OPENSHIFT_ORACLEJDBC_PORT" == "x" ]; then
-  OPENSHIFT_ORACLEJDBC_PORT="${oracle.db.port}"
-  set_env_var 'OPENSHIFT_ORACLEJDBC_PORT' "$OPENSHIFT_ORACLEJDBC_PORT" $env_dir
-fi
-
-if [ "x$OPENSHIFT_ORACLEJDBC_SCHEMA_NAME" == "x" ]; then
-  OPENSHIFT_ORACLEJDBC_SCHEMA_NAME="${oracle.db.schemaName}"
-  set_env_var 'OPENSHIFT_ORACLEJDBC_SCHEMA_NAME' "$OPENSHIFT_ORACLEJDBC_SCHEMA_NAME" $env_dir
-fi
-
-if [ "x$OPENSHIFT_ORACLEJDBC_USERNAME" == "x" ]; then
-  OPENSHIFT_ORACLEJDBC_USERNAME="${oracle.db.username}"
-  set_env_var 'OPENSHIFT_ORACLEJDBC_USERNAME' "$OPENSHIFT_ORACLEJDBC_USERNAME" $env_dir
-fi
-
-if [ "x$OPENSHIFT_ORACLEJDBC_PASSWORD" == "x" ]; then
-  OPENSHIFT_ORACLEJDBC_PASSWORD="${oracle.db.password}"
-  set_env_var 'OPENSHIFT_ORACLEJDBC_PASSWORD' "$OPENSHIFT_ORACLEJDBC_PASSWORD" $env_dir
-fi
-
 client_result "Oracle JDBC cartridge ${project.version} installed (supports Oracle JDBC driver ${oracle_jdbc_version})."
 
 client_result ""
 client_result "Please make note of these credentials:"
 client_result ""
-client_result "  Host        : ${OPENSHIFT_ORACLEJDBC_HOST}"
-client_result "  Port        : ${OPENSHIFT_ORACLEJDBC_PORT}"
-client_result "  Username    : ${OPENSHIFT_ORACLEJDBC_USERNAME}"
-client_result "  Password    : ${OPENSHIFT_ORACLEJDBC_PASSWORD}"
-client_result "  Schema Name : ${OPENSHIFT_ORACLEJDBC_SCHEMA_NAME}"
+pretty_print_client_result "Host" "${OPENSHIFT_ORACLEJDBC_HOST}"
+pretty_print_client_result "Port" "${OPENSHIFT_ORACLEJDBC_PORT}"
+pretty_print_client_result "Username" "${OPENSHIFT_ORACLEJDBC_USERNAME}"
+pretty_print_client_result "Password" "${OPENSHIFT_ORACLEJDBC_PASSWORD}"
+pretty_print_client_result "Schema" "${OPENSHIFT_ORACLEJDBC_SCHEMA_NAME}"
 client_result ""
 
 cart_props "jndi_name=${OPENSHIFT_ORACLEJDBC_JNDI_NAME}"
